--- a/traffic-fe/package.json
+++ b/traffic-fe/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "ant-design-vue": "^3.2.9",
+    "axios": "^0.27.2",
     "echarts": "^5.3.3",
     "vue": "^3.2.25",
     "vue-router": "^4.0.13",
