--- a/traffic-fe/package.json
+++ b/traffic-fe/package.json
@@ -11,12 +11,14 @@
     "ant-design-vue": "^3.2.9",
     "axios": "^0.27.2",
     "echarts": "^5.3.3",
+    "less": "^4.1.3",
     "vue": "^3.2.25",
     "vue-router": "^4.0.13",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.3",
+    "less-loader": "^7.3.0",
     "vite": "^2.9.9"
   }
 }
